--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,10 +6,21 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-22.04                    # similar to "image" in GitLab
+  terrascan:
+    runs-on: ubuntu-22.04
     steps:
-      - run: echo "This is a build step"
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Run Terrascan
+        id: terrascan
+        uses: tenable/terrascan-action@v1
+        with:
+          iac_type: 'terraform'
+          iac_version: 'v14'
+          policy_type: 'aws'
+          only_warn: true
+          iac_dir: 'aws'
 
   test:
     runs-on: ubuntu-22.04
